Add favicon picture

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>VideoPlayer</title>
+      <link rel="icon" href="Favicon.png" type="image/png">
     <style type="text/css">
       .video-player {
       display: flex;
