--- a/index.html
+++ b/index.html
@@ -117,9 +117,8 @@
             <span class="js-current-time"></span>
           </div>
           <div class="js-progress viewing-panel__progressbar">
-            <div class="js-progress-slider progress-slider">
-              <span class="dot"></span>
-            </div>
+            <div class="js-progress-slider progress-slider"></div>
+            <span class="dot"></span>
           </div>
           <div class="viewing-panel__duration time-font">
             <span class="js-duration"></span>
